--- a/apps/server-frida-runner/package.json
+++ b/apps/server-frida-runner/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tsc && node dist/index.js"
+    "dev": "npx tsc && node dist/index.js --host"
   },
   "author": "Raghav Korde",
   "license": "ISC",
