--- a/apps/manager-backend-tango/package.json
+++ b/apps/manager-backend-tango/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "dev": "npx tsc && node dist/index.js"
+    "dev": "npx tsc && node dist/index.js  --host"
   },
   "keywords": ["device-manager", "backend", "tango"],
   "author": "Raghav Korde",
