--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dev-rvk/adm-config",
+    "name": "config",
     "version": "1.0.2",
     "main": "dist/config.js",
     "type": "module",
