--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
+    "dev": "pnpm run config && turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "ui": "pnpm --filter @repo/ui ui",
@@ -17,7 +17,7 @@
     "prettier": "^3.5.1",
     "turbo": "2.4.2"
   },
-  "packageManager": "pnpm@8.9.0",
+  "packageManager": "pnpm@10.10.0",
   "engines": {
     "node": ">=18"
   }
